Add example classes for advanced customization and concurrent readers, and update CachePerformanceTest with public method